Update swift-sh article

--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -20,7 +20,7 @@ and evolve its capabilities for
 [machine learning](https://www.tensorflow.org/swift/).
 
 Scripting is another point of interest for the Swift community,
-but the amount of setup required to incorporate 3rd-party dependencies
+but the amount of setup required to use 3rd-party libraries
 has long been seen as a non-starter.
 
 ...that is, until now.
@@ -37,7 +37,7 @@ imported with a special trailing comment.
 
 Although in its initial stages of development,
 it's already seemingly managed to solve the biggest obstacle
-to Swift from becoming a productive scripting language.
+to Swift becoming a productive scripting language.
 
 This week,
 let's take a very early look at this promising new library
@@ -45,7 +45,7 @@ and learn how to start using it today to write Swift scripts.
 
 ## Installation and Setup
 
-Assuming you have Swift and the Xcode Developer Tools on your system,
+Assuming you have Swift and Xcode on your system,
 you can install `swift-sh` with [Homebrew](/homebrew/)
 using the following command:
 
@@ -64,7 +64,8 @@ or as using the `swift sh` subcommand.
 
 ## Example Usage
 
-The original Swift Package Manager examples
+The original
+[Swift Package Manager](https://swift.org/package-manager/) examples
 provided a
 [shuffleable](https://github.com/apple/example-package-fisheryates)
 [`Deck`](https://github.com/apple/example-package-deckofplayingcards) of
@@ -175,7 +176,7 @@ The notable difference here is that
 the `==` operator is used to specify a revision
 rather than a tagged release.
 
-### Enlisting Players
+### Recruiting Players
 
 With all of our dependencies accounted for,
 we have everything we need to write our script.
@@ -270,6 +271,17 @@ We can run our completed Swift script
 from the command line by passing the file
 as an argument to the `swift sh` subcommand.
 
+Behind the scenes,
+`swift-sh` creates a Swift package
+and tells the Swift Package Manager
+to fetch the dependencies for each commented import declaration
+(here, `DeckOfPlayingCards` and `Cycle`),
+and build an executable using those modules.
+
+Running our project,
+the formatted description we implemented above
+for each of the players, as expected.
+
 ```terminal
 $ swift sh ./bridge.swift
 North:  ♠︎ K 10 9 8 5 4
@@ -295,7 +307,7 @@ South:  ♠︎ A 6
 
 _Smashing!_
 
-### Making an Executable
+## Making an Executable
 
 On Unix systems,
 a <dfn>shebang</dfn> (`#!`) indicates how a script should be interpreted.
