Update swift-sh article

--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -30,7 +30,7 @@ On Friday,
 [announced](https://twitter.com/mxcl/status/1083942251003297794)
 a new project called
 [swift-sh](https://github.com/mxcl/swift-sh).
-The project provides a shim around the Swift compiler
+It provides a shim around the Swift compiler
 that creates a package for your script
 and uses it to automatically add and manage external dependencies
 imported with a special trailing comment.
@@ -330,6 +330,40 @@ $ mv bridge.swift bridge
 $ chmod +x bridge
 $ ./bridge
 ```
+
+Talking the talk of a command-line program
+is fine for scripts on your local environment.
+But if you have any ambitions to share your script outside your system,
+a much better option would be to distribute a package instead.
+
+## Converting Scripts to Packages
+
+Just as Xcode Playgrounds can be a great place to try out ideas
+before them into an iOS or macOS app,
+scripts offer a lightweight alternative
+to creating a Swift package from the start
+when prototyping functionality.
+
+`swift-sh` streamlines the conversion from script to package
+with its built-in `eject` command.
+Similar to [ejecting from a `create-react-app` setup](https://github.com/facebook/create-react-app/blob/master/packages/react-scripts/template/README.md#npm-run-eject),
+running `swift sh eject` copies over the
+underlying package structure of your script.
+
+```terminal
+$ swift sh eject ./bridge
+Created Bridge/
+
+$ tree Bridge/
+Bridge/
+├── Package.swift
+└── Sources
+    └── main.swift
+```
+
+From here,
+it's a piece of cake to
+[distribute your Swift executable with Homebrew](/homebrew/).
 
 ## Current Limitations
 
