Added Instructions for Installation with Homebrew

--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -7,6 +7,9 @@ excerpt: Not all code can be glamorous.
   is a slog of boilerplate.
 status:
   swift: 4.2
+revisions:
+  "2018-07-09": First Publication
+  "2019-01-19": Added Instructions for Installation with Homebrew
 ---
 
 The term _"boilerplate"_ goes back to the early days of print media.
@@ -152,12 +155,18 @@ it may be difficult to determine the underlying cause.
 
 {% endwarning %}
 
-## Using GYB in Xcode
+## Installing GYB
 
 GYB isn't part of the standard Xcode toolchain,
 so you won't find it with `xcrun`.
-Instead, you can download the source code
-and then use the `chmod` command to make `gyb` executable
+Instead, you can download it using [Homebrew](/homebrew/):
+
+```terminal
+$ brew install nshipster/formulae/gyb
+```
+
+Alternatively, you can download the source code
+and use the `chmod` command to make `gyb` executable
 (the default installation of Python on macOS should be able to run `gyb`):
 
 ```terminal
@@ -166,9 +175,12 @@ $ wget https://github.com/apple/swift/raw/master/utils/gyb.py
 $ chmod +x gyb
 ```
 
-Move these somewhere that can be accessed from your Xcode project,
-but keep them separate from your source files.
-For example, a `Vendor` directory at your project root.
+If you go this route,
+be sure to move these somewhere that can be accessed from your Xcode project,
+but keep them separate from your source files
+(for example, a `Vendor` directory at your project root).
+
+## Using GYB in Xcode
 
 In Xcode, click on the blue project file icon in the navigator,
 select the active target in your project,
