Update Swift GYB code

--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -227,23 +227,43 @@ and then iterate over that collection
 for type, property, or method declarations:
 
 ```python
-%{ abilities = ['strength', 'dexterity', 'constitution',
-                'intelligence', 'wisdom', 'charisma']
-}
+%{
+    abilities = ['strength', 'dexterity', 'constitution',
+                 'intelligence', 'wisdom', 'charisma']
+}%
 class Character {
   var name: String
 
 % for ability in abilities:
-  var ${type}: Int
+  var ${ability}: Int
 % end
 }
 ```
 
-Just be aware that a lot of repetition is a code smell,
+Evaluating this with GYB produces the following Swift code:
+
+```swift
+class Character {
+  var name: String
+
+  var strength: Int
+  var dexterity: Int
+  var constitution: Int
+  var intelligence: Int
+  var wisdom: Int
+  var charisma: Int
+}
+```
+
+{% important %}
+
+A lot of repetition in code is a smell,
 and may indicate that there's a better way to accomplish your task.
 Built-in language feature like protocol extensions and generics
 can eliminate a lot of code duplication,
 so be on the lookout to use these instead of brute-forcing with GYB.
+
+{% endimportant %}
 
 ### Generating Code Derived from Data
 
