Remove unsupported tag

--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -255,15 +255,11 @@ class Character {
 }
 ```
 
-{% important %}
-
-A lot of repetition in code is a smell,
+A lot of repetition in code is a smell
 and may indicate that there's a better way to accomplish your task.
 Built-in language feature like protocol extensions and generics
 can eliminate a lot of code duplication,
 so be on the lookout to use these instead of brute-forcing with GYB.
-
-{% endimportant %}
 
 ### Generating Code Derived from Data
 
