--- a/2019-03-11-mapkit-js.md
+++ b/2019-03-11-mapkit-js.md
@@ -14,6 +14,8 @@ status:
   reviewed: March 11, 2018
 ---
 
+{% asset "articles/mapkit-js.css" %}
+
 Announced in 2018,
 [MapKit JS](https://developer.apple.com/documentation/mapkitjs)
 takes the convenient cartographic capabilities of
@@ -326,7 +328,7 @@ is navigating the Swift package ecosystem.
 At the time of writing,
 the Vapor project's JWT package
 [doesn't implement the EC256 algorithm](https://github.com/vapor/jwt/issues/92)
-that's needed to sign JWT tokens for MapKit JS
+that's needed to sign JWT tokens for MapKit JS.
 Our example project uses
 the Kitura project's [SwiftJWT](https://github.com/IBM-Swift/Swift-JWT) package,
 which does satisfy these requirements.
