--- a/2019-03-11-mapkit-js.md
+++ b/2019-03-11-mapkit-js.md
@@ -486,7 +486,7 @@ map.addAnnotation(annotation);
 ```html
 <div id="map"></div>
 <script src="https://cdn.apple-mapkit.com/mk/5.x.x/mapkit.js"></script>
-{% asset 'map-embed.js' async %}
+{% asset 'articles/mapkit-js.js' async="async" %}
 ```
 
 With only a few lines of JavaScript and HTML,
@@ -495,7 +495,7 @@ using MapKit JS.
 
 <div id="map"></div>
 <script src="https://cdn.apple-mapkit.com/mk/5.x.x/mapkit.js"></script>
-{% asset 'map-embed.js' async %}
+{% asset 'articles/mapkit-js.js' async="async" %}
 
 ---
 
