Add note about CSP

--- a/2019-03-11-mapkit-js.md
+++ b/2019-03-11-mapkit-js.md
@@ -497,6 +497,13 @@ using MapKit JS.
 <script src="https://cdn.apple-mapkit.com/mk/5.x.x/mapkit.js"></script>
 {% asset 'articles/mapkit-js.js' async="async" %}
 
+{% warning %}
+Embedding a MapKit JS map on a website with a
+[Content Security Policy (CSP)](https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP)?
+Be sure to add `https://*.apple-mapkit.com` to your
+`script-src`, `img-src`, and `connect-src` directives.
+{% endwarning %}
+
 ---
 
 MapKit JS joins a robust ecosystem of mapping providers.
