Add note about Accept-Language header field values

--- a/2012-09-03-locale.md
+++ b/2012-09-03-locale.md
@@ -228,7 +228,7 @@ import Foundation
 let url = URL(string: "https://nshipster.com")!
 var request = URLRequest(url: url)
 
-let acceptLanguage = Locale.preferredLanguages.joined(separator: ",")
+let acceptLanguage = Locale.preferredLanguages.joined(separator: ", ")
 request.setValue(acceptLanguage, forHTTPHeaderField: "Accept-Language")
 ```
 
@@ -236,6 +236,22 @@ Even if your server doesn't yet localize its resources,
 putting this in place now allows you to flip the switch when the time comes ---
 without having to push an update to the client.
 _Neat!_
+
+{% info %}
+[HTTP content negotiation](https://tools.ietf.org/html/rfc7231#section-3.4)
+is a complex topic,
+and apps interacting with localized, remote resources
+should use `Locale.preferredLanguages` as a starting point
+for generating a more precise `Accept-Language` field value.
+For example,
+you might specify an <dfn>associated quality value</dfn>
+like in `en-SG, en;q=0.9`
+to tell the server
+_"I prefer Singaporean English, but will accept other types of English"_.
+
+For more information,
+see [RFC 7231](https://tools.ietf.org/html/rfc7231#section-5.3.5).
+{% endinfo %}
 
 ---
 
