--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -290,13 +290,13 @@ and puts them where they belong ---
 into `xcconfig` files.
 
 ```
-# Development.xcconfig
+// Development.xcconfig
 API_BASE_URL = api.example.dev
 API_KEY = 9e053b0285394378cf3259ed86cd7504
 
 ---
 
-# Production.xcconfig
+// Production.xcconfig
 API_BASE_URL = api.example.com
 API_KEY = 4571047960318d233d64028363dfa771
 ```
