Proposal: workaround for inserting ‘https://' into .xcconfig’s

--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -311,6 +311,13 @@ those backslashes show up literally
 and must be removed from the resulting value.
 This is especially inconvenient when specifying per-environment URL constants.
 
+The ugly workaround option for that is using an empty value reference: 
+
+```
+SCHEME = https:/$()/
+API_BASE_URL = $(SCHEME)/api.example.com
+```
+
 If you'd rather not work around this unfortunate behavior,
 you can always omit the scheme and prepend `https://` in code.
 _(You are using https... right?)_
