--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -21,7 +21,7 @@ Understanding what each project setting does
 and how they all interact with one another
 is a skill that can take years to hone.
 And the fact that much of this information
-is buried deep within the GUIs os Xcode does us no favors.
+is buried deep within the GUIs of Xcode does us no favors.
 
 Navigate to the "Build Settings" tab of the project editor,
 and you'll be greeted by _hundreds_ of build settings
