Fix typo /thanks @janardan

--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -161,7 +161,7 @@ is shorthand for specifying a version
 "equal to or greater than in the least significant digit"
 according to [Semantic Versioning](https://semver.org) conventions.
 In this case, Swift Package Manager will use the latest release
-whose major is equal to `4` and minor release is equal `0`
+whose major is equal to `4` and minor release is equal to `0`
 (that is, it will use `4.0.1` or`4.0.0`, but not `4.1.0` or `5.0.0`).
 
 For the `PlayingCard` module,
