Update revision history

--- a/2015-06-01-mirror.md
+++ b/2015-06-01-mirror.md
@@ -9,7 +9,7 @@ excerpt: >-
   introspection rather than reflection.
   But can you really blame them for going with that terminology?
 revisions:
-  "2015-06-01": First Publication
+  "2015-06-01": Original publication
   "2018-11-14": Updated for Swift 4.2
 status:
   swift: 4.2
