--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -8,8 +8,8 @@ excerpt: Not all code can be glamorous.
 status:
   swift: 4.2
 revisions:
-  "2018-07-09": First Publication
-  "2019-01-19": Added Instructions for Installation with Homebrew
+  "2018-07-09": Original publication
+  "2019-01-19": Added instructions for installation with Homebrew
 ---
 
 The term _"boilerplate"_ goes back to the early days of print media.
