--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -11,8 +11,8 @@ excerpt: >
   our logical and physical understanding of equality 
   with the domains we model.
 revisions:
-  "2013-08-26": First Publication
-  "2018-08-15": Updated and Expanded
+  "2013-08-26": Original publication
+  "2018-08-15": Updated and expanded
 status:
   swift: n/a
 ---
