--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -4,8 +4,8 @@ author: Mattt
 category: Cocoa
 excerpt: "Of all the one-dimensional data types out there, URIs reign supreme. Here, in a single, human-parsable string, is every conceivable piece of information necessary to encode the location of any piece of information that has, does, and will ever exist on a computer."
 revisions:
-  "2014-03-24": Original publication.
-  "2015-09-08": Added Swift translation & section on `stringByAddingPercentEncodingWithAllowedCharacters`.
+  "2014-03-24": Original publication
+  "2015-09-08": Added Swift translation & section on `stringByAddingPercentEncodingWithAllowedCharacters`
 status:
   swift: 2.0
   reviewed: September 9, 2015
