Add screenshot for Info.plist

--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -348,6 +348,11 @@ you can access the values for those settings
 through the `infoDictionary` property of Foundation's `Bundle` API.
 _Neat!_
 
+<picture>
+    <source srcset="{% asset xcconfig-project-info-plist--dark.png @path %}" media="(prefers-color-scheme: dark)">
+    <img src="{% asset xcconfig-project-info-plist--light.png @path %}" alt="Xcode Info.plist">
+</picture>
+
 Following this approach,
 we might do something like the following:
 
