Capitalize xcconfig file names

--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -404,14 +404,14 @@ add the following to your `.gitignore` file
 
 ```
 # .gitignore
-development.xcconfig
-staging.xcconfig
-production.xcconfig
+Development.xcconfig
+Staging.xcconfig
+Production.xcconfig
 ```
 
 In place of those files,
 some developers like to have placeholder files
-(e.g. `development.sample.xcconfig`)
+(e.g. `Development.sample.xcconfig`)
 with all of the expected keys.
 When checking out the repository,
 the developer copies this file to the non-placeholder location
