--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -432,4 +432,4 @@ Fortunately,
 Moving configuration out of Xcode and into `xcconfig` files
 confers a multitude of benefits
 and offers a way to distance your project from the particulars of Xcode
-without leaving a Cupertino-approved happy path.
+without leaving the Cupertino-approved "happy path".
