Added info and link to automation script

--- a/2018-11-19-vscode.md
+++ b/2018-11-19-vscode.md
@@ -193,6 +193,16 @@ and the [Swift Lint extension](https://marketplace.visualstudio.com/items?itemNa
 
 {% endinfo %}
 
+{% info %}
+
+Don't want to run all the commands yourself? Looking for a way to keep SourceKit-LSP updated without having to dig back through this article? We've got you covered with a handy [script](https://gist.githubusercontent.com/bdrelling/371aded288f26da549d60531cfca3c97/raw/) that flies through all the steps above and tries to automate what it can or instruct you when it can't.
+
+You can also just run `bash <(curl -s https://gist.githubusercontent.com/bdrelling/371aded288f26da549d60531cfca3c97/raw/)` in your terminal. 
+
+If you already have `apple/sourcekit-lsp` cloned, we recommend you run this script (or command) in that directory. Otherwise, the script will clone the `apple/sourcekit-lsp` repo into _another_ directory.
+
+{% endinfo %}
+
 ---
 
 So there you have it ---
