--- a/2018-10-31-void.md
+++ b/2018-10-31-void.md
@@ -423,7 +423,7 @@ completion(.success)
 
 ---
 
-Though it may seem like a purely academic exercise ---
+It may seem like a purely academic exercise ---
 philosophical, even.
 But an investigation into the `Void` yields deep insights
 into the very fabric of reality for the Swift programming language.
