Added #snapshots to URL

--- a/2018-11-19-vscode.md
+++ b/2018-11-19-vscode.md
@@ -89,7 +89,7 @@ its performance and memory footprint are comparable to a native app.
 
 ## Step 2: Install the Latest Swift Toolchain
 
-Go to [Swift.org](https://swift.org/download/)
+Go to [Swift.org](https://swift.org/download/#snapshots)
 and download the latest trunk development snapshot
 (at the time of writing, this was from November 16th, 2018).
 Once it's finished downloading,
