Added warning about npm run createDevPackage failure

--- a/2018-11-19-vscode.md
+++ b/2018-11-19-vscode.md
@@ -175,6 +175,12 @@ $ npm run createDevPackage
 $ code --install-extension out/sourcekit-lsp-vscode-dev.vsix
 ```
 
+{% warning %}
+
+As of May 26th, 2019, the `npm run createDevPackage` command fails. To fix this, simply run `npm install -S @types/lodash@4.14.132`, then run the last two commands in the snippet above.
+
+{% endwarning %}
+
 Now launch (or relaunch) VSCode and open a Swift project,
 such as [this one](https://github.com/flight-school/money),
 and enjoy an early preview of the functionality provided by
