--- a/2019-06-12-wwdc-2019.md
+++ b/2019-06-12-wwdc-2019.md
@@ -266,6 +266,17 @@ but with forthcoming support for
 [Web App Manifest in WebKit](https://webkit.org/status/#specification-web-app-manifest),
 we're getting _really_ close.
 
+When the iPhone was first debuted in 2007,
+the intent was for 3rd-party developers to distribute software through web apps.
+The strong distinction between native and web apps
+is a product of history,
+not an immutable truth about software.
+When you think about the future of "apps",
+you have to wonder if this distinction will still make sense in 5 or 10 years.
+Aside from ubiquitous high-speed wireless internet,
+there's nothing particularly futuristic about
+downloading a 50MB payload from the App Store.
+
 {% info %}
 
 I think Apple has a real chance at checking JavaScript hegemony
