Revert "Copy editing"
This reverts commit 3097f1fc565f8b02306b0802b3007756ce2c1c7e.

--- a/2019-06-12-wwdc-2019.md
+++ b/2019-06-12-wwdc-2019.md
@@ -415,8 +415,8 @@ SwiftUI solves some of the most visible problems facing Apple platforms,
 but these aren't the most important are most difficult of software development ---
 not by a long shot.
 
-Taking care of yourself;
-sleeping enough, eating right, and exercising regularly
+Taking care of yourself ---
+sleeping enough, eating right, exercising regularly ---
 will do more to improve your productivity
 than any language or framework out there.
 Your ability to communicate and collaborate with others
