--- a/2019-06-12-wwdc-2019.md
+++ b/2019-06-12-wwdc-2019.md
@@ -266,7 +266,7 @@ but with forthcoming support for
 [Web App Manifest in WebKit](https://webkit.org/status/#specification-web-app-manifest),
 we're getting _really_ close.
 
-When the iPhone was first debuted in 2007,
+When the iPhone first debuted in 2007,
 the intent was for 3rd-party developers to distribute software through web apps.
 The strong distinction between native and web apps
 is a product of history,
