--- a/2019-06-12-wwdc-2019.md
+++ b/2019-06-12-wwdc-2019.md
@@ -412,7 +412,7 @@ that will have a more immediate impact on your users and your own career.
 ### Silver Bullets and Universal Truths
 
 SwiftUI solves some of the most visible problems facing Apple platforms,
-but these aren't the most important or the most difficult of software development ---
+but they aren't the most important or the most difficult ones ---
 not by a long shot.
 
 Taking care of yourself ---
