Update link to Property Wrappers

--- a/2019-06-12-wwdc-2019.md
+++ b/2019-06-12-wwdc-2019.md
@@ -85,7 +85,7 @@ struct Content: View {
 
 Even if you ardently followed the [Swift Forums](https://forums.swift.org)
 and knew about the proposals for
-[property delegates](https://github.com/apple/swift-evolution/blob/master/proposals/0258-property-delegates.md),
+[property wrappers](/propertywrapper/),
 [implicit returns for single-line expressions](https://github.com/apple/swift-evolution/blob/master/proposals/0255-omit-return.md), and
 [opaque result types](https://github.com/apple/swift-evolution/blob/master/proposals/0244-opaque-result-types.md)...
 you still might struggle to
