--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -360,22 +360,34 @@ we might do something like the following:
 import Foundation
 
 enum Configuration {
-    static func value<T>(for key: String) -> T {
-        guard let value = Bundle.main.infoDictionary?[key] as? T else {
-            fatalError("Invalid or missing Info.plist key: \(key)")
+    enum Error: Swift.Error {
+        case missingKey, invalidValue
+    }
+
+    static func value<T>(for key: String) throws -> T where T: LosslessStringConvertible {
+        guard let object = Bundle.main.object(forInfoDictionaryKey:key) else {
+            throw Error.missingKey
         }
 
-        return value
+        switch object {
+        case let value as T:
+            return value
+        case let string as String:
+            guard let value = T(string) else { fallthrough }
+            return value
+        default:
+            throw Error.invalidValue
+        }
     }
 }
 
 enum API {
     static var baseURL: URL {
-        return URL(string: "https://" + Configuration.value(for: "API_BASE_URL"))!
+        return URL(string: "https://" + try! Configuration.value(for: "API_BASE_URL"))!
     }
 
     static var key: String {
-        return Configuration.value(for: "API_KEY")
+        return try! Configuration.value(for: "API_KEY")
     }
 }
 ```
