Link directly to MapKit JS example code

--- a/2019-03-11-mapkit-js.md
+++ b/2019-03-11-mapkit-js.md
@@ -42,13 +42,10 @@ on our way to a working integration.
 When investigating any new language or framework,
 it's always helpful to see a full, working example.
 So in preparation for this article,
-we built [this example app](https://bikemap.nshipster.com),
+we built [this example app](https://github.com/NSHipster/MapKitJS-Demo),
 which uses MapKit JS to show which bikes are available to rent through
 [BIKETOWN](https://www.biketownpdx.com),
 Portland's bike share service.
-
-Feel free to go straight to the
-[sample code project](https://github.com/NSHipster/MapKitJS-Demo).
 
 {% endinfo %}
 
