Provide hexadecimalization and quantizing instructions

--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -792,17 +792,55 @@ $ find . -name '*.xib' -or -name '*.storyboard' \
 1  0.69019607839999997  0.0  1
 ```
 
+Some entries may be equivalent, within a small delta of each other
+(because, you know... floating-point numbers).
+To account for account for this,
+and to transform our output into something easier to work with,
+you can write the output to a file and process it with a script
+like this one:
+
+```ruby
+colors = File.readlines('distinct_colors.txt').map do |line|
+    components = line.strip.split(/\s+/).flat_map(&:to_f)
+    red, green, blue = components[0..2].map{ |c| (c * 255).floor }
+    alpha = (components.last * 100).floor
+    [red, green, blue, alpha]
+end
+
+colors.uniq.each do |color|
+    puts "#%02X%02X%02X (%d%%)" % color
+end
+```
+
 From here,
-the final step is to map each set of RGBA values
+the final step is to map each set of
+<abbr title="red green blue alpha">RGBA</abbr> values
 to the corresponding named color that you want to replace it with.
 
-{% warning %}
+{% info %}
 
-Some entries may be equivalent within a small delta,
-because, you know... floating-point numbers.
-You should factor in these minor discrepancies when mapping named colors.
+If your data set is large,
+or if you just don't trust your eyes to quantize these colors correctly,
+you can use a clustering algorithm to do that for you.
 
-{% endwarning %}
+You may be familiar with
+[_k_-means clustering](https://en.wikipedia.org/wiki/K-means_clustering),
+but that requires us to specify the target number of clusters ahead of time.
+When you don't know how many groups there are <em lang="la">a priori</em>,
+[<abbr title="density-based spatial clustering of applications with noise">DBSCAN</abbr>](https://en.wikipedia.org/wiki/DBSCAN)
+can be a nice alternative.
+
+Ruby conveniently has a [gem](https://rubygems.org/gems/dbscan/versions/0.2)
+that suits our purpose:
+
+```ruby
+require 'dbscan'
+
+dbscan = DBSCAN(colors, epsilon: 8, min_points: 1, distance: :euclidean_distance)
+puts dbscan.results
+```
+
+{% endinfo %}
 
 #### Replacing Custom Colors
 
@@ -814,10 +852,8 @@ when replacing a custom color with a named color in Interface Builder:
 
 {% error %}
 
-I can't vouch for the correctness of this automation
-except in the base example presented in this article.
-Use this script at your own risk for your own project,
-making sure to save your work in revision control.
+I can't vouch for the correctness of this script,
+so use it at your own risk.
 
 {% enderror %}
 
