Add note about CIELUV

--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -831,7 +831,7 @@ When you don't know how many groups there are <em lang="la">a priori</em>,
 can be a nice alternative.
 
 Ruby conveniently has a [gem](https://rubygems.org/gems/dbscan/versions/0.2)
-that suits our purpose:
+that suits our purpose<sup>\*</sup>:
 
 ```ruby
 require 'dbscan'
@@ -839,6 +839,11 @@ require 'dbscan'
 dbscan = DBSCAN(colors, epsilon: 8, min_points: 1, distance: :euclidean_distance)
 puts dbscan.results
 ```
+
+_<sup>\*</sup> For best results,
+convert <abbr>RGBA</abbr> values to
+[a color space with perceptual uniformity](https://en.wikipedia.org/wiki/CIELUV)
+before clustering._
 
 {% endinfo %}
 
