Explicitly note script as Ruby

--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -796,8 +796,8 @@ Some entries may be equivalent, within a small delta of each other
 (because, you know... floating-point numbers).
 To account for account for this,
 and to transform our output into something easier to work with,
-you can write the output to a file and process it with a script
-like this one:
+you can write the output to a file and process it with
+a Ruby script like this one:
 
 ```ruby
 colors = File.readlines('distinct_colors.txt').map do |line|
