--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -32,7 +32,7 @@ is reminiscent of some other
 Labor Day is also the unofficial end of summer;
 the long weekend acting as a buffer between
 the lemonades, sunburns, and trashy romance novels of June and
-the pumpkin spice lattés, flu shots, and textbooks of September.
+the pumpkin spice lattes, flu shots, and textbooks of September.
 
 However,
 for the stereotypical tech worker,
@@ -167,17 +167,14 @@ import SwiftySwiftColorSwift
 let orange = UIColor(hex: "#FB8C00") // 👎
 ```
 
-Setting aside whatever qualms we have with
-how they're typically employed
-or any misgivings you might have about
-their underlying implementations,
+Setting aside any qualms about how they're typically employed and implemented,
 you'd be well-advised to have these go the way of color literals
 for the same reasons we described in the previous section.
 
 But worry not!
 You'll still have a way to define colors
 using those hex codes that your designer sent over,
-as we'll see in our discussion of [named colors](#color-assets)
+as we'll see in our discussion of [named colors](#color-assets).
 
 ### Find & Replace Fixed Colors
 
