--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -185,7 +185,7 @@ because they don't automatically adjust for light or dark appearance.
 For example,
 setting a label's color to `.black` looks fine
 against the default `UITableViewCell` background,
-but is illegible when that background becomes black
+but it's illegible when that background becomes black
 when Dark Mode is enabled.
 
 To make your app ready for Dark Mode on iOS 13,
