Update named color migration script

--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -862,52 +862,79 @@ so use it at your own risk.
 ```ruby
 require 'nokogiri'
 
-def name_for_color_components(red, green, blue, alpha)
-    # Return named color matching components
-    # e.g. 1 0.69 0 1 => "Accent"
+def name_for_rgba_components(red, green, blue, alpha)
+    case format('#%02X%02X%02X%02X', red, green, blue, alpha)
+    # Return named color matching RGBA components
+    # e.g. "#F8CB00FF" => "Accent"
+    end
+end
+
+def name_for_white_and_alpha_components(white, alpha)
+    # Return named color matching white and alpha components
+    # e.g. 0.9 => "Off-White"
 end
 
 # Process each Storyboard and XIB file
 Dir['**/*.{storyboard,xib}'].each do |xib|
-    doc = Nokogiri::XML(File.read(xib))
+  doc = Nokogiri::XML(File.read(xib))
 
-    names = []
-    # Collect each custom color and assign it a name
-    doc.xpath("//color[@colorSpace='custom']").each do |color|
-        components = color.attributes.values_at("red", "green", "blue", "alpha")
-                                     .map(&:value)
-                                     .map(&:to_f)
-        next unless name = name_for_color_components(*components)
+  names = []
+  # Collect each custom color and assign it a name
+  doc.xpath('//objects//color').each do |color|
+    next if color['name']
 
-        named_color = doc.create_element("color",
-                                         key: color['key'],
-                                         name: name)
-        color.replace(named_color)
-        names << name
+    name = nil
+
+    color_space = color['colorSpace']
+    color_space = color['customColorSpace'] if color_space == 'custom'
+
+    case color_space
+    when 'sRGB', 'calibratedRGB'
+      components = color.attributes
+                        .values_at('red', 'green', 'blue', 'alpha')
+                        .map(&:value)
+                        .map(&:to_f)
+                        .map { |c| c * 255 }
+      name = name_for_rgba_components(*components)
+    when 'genericGamma22GrayColorSpace', 'calibratedWhite'
+      components = color.attributes
+                        .values_at('white', 'alpha')
+                        .map(&:value)
+                        .map(&:to_f)
+      name = name_for_white_and_alpha_components(*components)
     end
 
-    # Proceed to the next file if no named colors were found
-    next if names.empty?
+    next unless name
 
-    # Add the named color capability as a document dependency
-    dependencies = doc.at("/document/dependencies") ||
-                   doc.root.add_child(doc.create_element("dependencies"))
-    unless dependencies.matches?("capability[@name='Named colors']")
-        dependencies << doc.create_element("capability",
-                                            name: "Named colors",
-                                            minToolsVersion: "9.0")
-    end
+    named_color = doc.create_element('color',
+                                     key: color['key'],
+                                     name: name)
+    color.replace(named_color)
+    names << name
+  end
 
-    # Add each named color to the document resources
-    resources = doc.at("/document/resources") ||
-                doc.root.add_child(doc.create_element("resources"))
-    names.uniq.sort.each do |name|
-        next if resources.matches?("namedColor[@name='#{name}']")
-        resources << doc.create_element("namedColor", name: name)
-    end
+  # Proceed to the next file if no named colors were found
+  next if names.empty?
 
-    # Save the changes
-    File.write(xib, doc.to_xml(indent: 4, encoding: 'UTF-8'))
+  # Add the named color capability as a document dependency
+  dependencies = doc.at('/document/dependencies') ||
+                 doc.root.add_child(doc.create_element('dependencies'))
+  unless dependencies.at("capability[@name='Named colors']")
+    dependencies << doc.create_element('capability',
+                                       name: 'Named colors',
+                                       minToolsVersion: '9.0')
+  end
+
+  # Add each named color to the document resources
+  resources = doc.at('/document/resources') ||
+              doc.root.add_child(doc.create_element('resources'))
+  names.uniq.sort.each do |name|
+    next if resources.at("namedColor[@name='#{name}']")
+    resources << doc.create_element('namedColor', name: name)
+  end
+
+  # Save the changes
+  File.write(xib, doc.to_xml(indent: 4, encoding: 'UTF-8'))
 end
 ```
 
