--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -58,7 +58,7 @@ against the shade of your looming deadline.
 {% asset dark-mode-apple-banner.png %}
 
 <dfn>Dark Mode</dfn> is an appearance preference
-that tells the system and participating apps to adopt darker color palette.
+that tells the system and participating apps to adopt darker color palettes.
 Whereas an app may display dark text on a light background by default,
 it may instead show white text on a dark background.
 
