Update comment in web socket code sample
The closure passed to the receive method is called only once

--- a/2019-09-23-ios-13.md
+++ b/2019-09-23-ios-13.md
@@ -281,15 +281,15 @@ let url = URL(string: "wss://<#...#>")!
 let webSocketTask = URLSession.shared.webSocketTask(with: url)
 webSocketTask.resume()
 
-// Configure how messages are received
-webSocketTask.receive { result in
-    guard let .success(message) = result else { return }
+// Send one message
+let message: URLSessionWebSocketTask.Message = .string("Hello, world!")
+webSocketTask.send(message) { error in
     <#...#>
 }
 
-// Send a message
-let message: URLSessionWebSocketTask.Message = .string("Hello, world!")
-webSocketTask.send(message) { error in
+// Receive one message
+webSocketTask.receive { result in
+    guard let .success(message) = result else { return }
     <#...#>
 }
 
