Correct lang attribute for IPA

--- a/2019-09-23-ios-13.md
+++ b/2019-09-23-ios-13.md
@@ -608,7 +608,7 @@ are now deprecated in iOS 13.
 ## Annotate Text Content Types for Better Accessibility
 
 You know how frustrating it is to hear some people read out URLs?
-(<em lang="x-ipa">"eɪʧ ti ti pi ˈkoʊlən slæʃ slæʃ ˈdʌbəlju ˈdʌbəlju ˈdʌbəlju dɑt"...</em>)
+(<em lang="en-fonipa">"eɪʧ ti ti pi ˈkoʊlən slæʃ slæʃ ˈdʌbəlju ˈdʌbəlju ˈdʌbəlju dɑt"...</em>)
 That's what it can be like when
 [VoiceOver](https://www.apple.com/accessibility/iphone/vision/)
 tries to read something without knowing more about _what_ it's reading.
