Update link to Apple September 2019 event

--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -93,7 +93,7 @@ how everyone was doing things before we got an officially-sanctioned API.
 If you were following 100% of Apple's guidance to the letter,
 you'd barely have to change a line or code
 to get your app ready for
-[next week's special event](https://www.apple.com/apple-events/).
+[next week's special event](https://www.apple.com/apple-events/september-2019/).
 But most apps are built on solutions we built for ourselves
 to bridge the gaps in the SDK,
 and it may not be clear how to get on the new
