Fix colorLiteral sed one-liner (dark-mode.md)

--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -148,7 +148,7 @@ from the command line:
 
 ```terminal
 $ find . -name '*.swift'  \
-    -exec sed -i '' -E 's/#colorLiteral\(red: (.*), green: (.*), blue: (.*), alpha: (.*)\)/UIColor(red: \1, green: \2, blue: \3, alpha: \4)/ {} \;
+    -exec sed -i '' -E 's/#colorLiteral\(red: (.*), green: (.*), blue: (.*), alpha: (.*)\)/UIColor(red: \1, green: \2, blue: \3, alpha: \4)/' {} \;
 ```
 
 But before you do,
