--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -571,7 +571,7 @@ images, [data](/nsdataasset/), or other resources.
 
 <picture>
     <source srcset="{% asset dark-mode-color-asset--dark.png @path %}" media="(prefers-color-scheme: dark)">
-    <img src="{% asset dark-mode-color-asset--light.png @path %}" alt="Asset Catalog Color Asset" loading=lazy>
+    <img src="{% asset dark-mode-color-asset--light.png @path %}" alt="Asset Catalog Color Asset" loading="lazy">
 </picture>
 
 To create a color set,
@@ -586,7 +586,7 @@ selecting "8-bit Hexadecimal" from the "Input Method" drop-down.
 
 <picture style="width: 300px;">
     <source srcset="{% asset dark-mode-color-asset-attributes-inspector--dark.png @path %}" media="(prefers-color-scheme: dark)">
-    <img src="{% asset dark-mode-color-asset-attributes-inspector--light.png @path %}" alt="Asset Catalog Color Asset Attributes Inspector" loading=lazy width="300"/>
+    <img src="{% asset dark-mode-color-asset-attributes-inspector--light.png @path %}" alt="Asset Catalog Color Asset Attributes Inspector" loading="lazy" width="300"/>
 </picture>
 
 Here,
@@ -642,7 +642,7 @@ defined in your Asset Catalog.
 
 <picture style="width: 300px;">
     <source srcset="{% asset dark-mode-interface-builder-named-color--dark.png @path %}" media="(prefers-color-scheme: dark)">
-    <img src="{% asset dark-mode-interface-builder-named-color--light.png @path %}" alt="Interface Builder Named Color" loading=lazy width="300"/>
+    <img src="{% asset dark-mode-interface-builder-named-color--light.png @path %}" alt="Interface Builder Named Color" loading="lazy" width="300"/>
 </picture>
 
 For a small project,
