--- a/2019-09-23-ios-13.md
+++ b/2019-09-23-ios-13.md
@@ -123,7 +123,7 @@ which the user can tap to preview the linked webpage:
 
 <picture>
     <source srcset="{% asset ios-13-link-view--dark.png @path %}" media="(prefers-color-scheme: dark)">
-    <img src="{% asset ios-13-link-view--light.png @path %}" alt="iOS 13 Link View" loading=lazy width="300">
+    <img src="{% asset ios-13-link-view--light.png @path %}" alt="iOS 13 Link View" loading="lazy" width="300">
 </picture>
 
 {% info %}
