--- a/2019-11-12-secrets.md
+++ b/2019-11-12-secrets.md
@@ -187,7 +187,7 @@ $ tree <#...#>/Swordfish.app
 ```
 
 That `Info.plist` file we used to store our secrets?
-There it is, packaged right alongside our executable.
+Here it is, packaged right alongside our executable.
 
 By some measures,
 this approach might be considered _less_ secure than writing secrets in code,
@@ -203,8 +203,7 @@ $ plutil -p <#...#>/Swordfish.app/Info.plist
 
 <hr/>
 
-To recap:
-There doesn't seem to control the environment
+There doesn't seem to be a way to configure the environment
 when a user launches your app on their device.
 And as we saw in the previous section,
 using `Info.plist` as a clearinghouse for secrets <em lang="fr">qua</em> build settings
@@ -218,7 +217,7 @@ A while back,
 we wrote about [<dfn>GYB</dfn>](/swift-gyb/),
 a code generation tool used in the Swift standard library.
 Although that article focuses on eliminating boilerplate code,
-its metaprogramming capabilities go far beyond that.
+GYB's metaprogramming capabilities go far beyond that.
 
 For example,
 we can use GYB to pull environment variables into generated code:
@@ -239,8 +238,7 @@ solves the problem of leaking credentials in source code,
 but it fails to guard against common static analysis tools.
 However,
 we can use a combination of Swift and Python code (via GYB)
-to obfuscate any secrets in a way
-that makes it significantly more difficult to reverse-engineer.
+to obfuscate secrets in a way that's more difficult to reverse-engineer.
 
 For example, here's an (admittedly crude) solution
 that implements an <abbr>XOR</abbr> cipher
@@ -333,7 +331,7 @@ As the old saying goes:
 > You don’t have to outrun a bear to be safe.
 > You just have to outrun the guy next to you.
 
-## <small>🧠 Cosmic Brain</small> Don't Store Secrets On-Device
+## <small>🧠 Galaxy Brain</small> Don't Store Secrets On-Device
 
 No matter how much we obfuscate a secret on the client,
 it's only a matter of time before the secret gets out.
@@ -377,7 +375,7 @@ Or put another way:
 > A secret in Secure Enclave is safe,
 > but that is not what secrets are for.
 
-## <small>🧠 Galaxy Brain</small> Client Secrecy is Impossible
+## <small>🧠 Universe Brain</small> Client Secrecy is Impossible
 
 There's no way to secure secrets stored on the client.
 Once someone can run your software on their own device,
