--- a/2019-09-02-dark-mode.md
+++ b/2019-09-02-dark-mode.md
@@ -19,7 +19,7 @@ protections that serve as the foundation for the modern workplace.
 {% info %}
 
 By contrast,
-much of the rest of the world,
+much of the rest of the world
 instead observe
 [International Worker's Day](https://en.wikipedia.org/wiki/International_Workers%27_Day) on May 1st;
 [the resulting map](https://en.wikipedia.org/wiki/Labour_Day#/media/File:Observance_of_International_Workers'_Day_-_Revised.svg)
@@ -31,7 +31,7 @@ is reminiscent of some other
 
 Labor Day is also the unofficial end of summer;
 the long weekend acting as a buffer between
-the lemonades, sunburns, and trashy romance novels of June and
+the lemonades, sunburns, and trashy romance novels of August and
 the pumpkin spice lattes, flu shots, and textbooks of September.
 
 However,
