--- a/2019-09-23-ios-13.md
+++ b/2019-09-23-ios-13.md
@@ -214,16 +214,18 @@ Chinese
 
 {% warning %}
 
-According to the iOS 13 release notes, prior to iOS 13.2:
-"The `supportsOnDeviceRecognition` property always returns `false`
-the first time it’s accessed.
-After a few seconds,
-accessing it again returns the correct value."
+According to the iOS 13 release notes:
 
-As of 13.2 this is resolved:
-"The supportsOnDeviceRecognition property now returns the correct value. (47822242)"
+> The `supportsOnDeviceRecognition` property always returns `false`
+> the first time it’s accessed.
+> After a few seconds,
+> accessing it again returns the correct value.
 
-{% warning %}
+This is now resolved in iOS 13.2:
+
+> The supportsOnDeviceRecognition property now returns the correct value. (47822242)
+
+{% endwarning %}
 
 But that's not all for speech recognition in iOS 13!
 `SFSpeechRecognizer` now provides information including
