--- a/2018-07-30-never.md
+++ b/2018-07-30-never.md
@@ -201,11 +201,10 @@ Because `Never` is an uninhabited type,
 there aren't any possible values of it.
 So when we switch over `lhs` and `rhs`,
 Swift understands that there aren't any missing cases.
-And since all cases ----
+And since all cases ---
 of which there aren't any ---
 return `Bool`,
 the method compiles without a problem.
-
 _Neat!_
 
 ---
