Replace <tt> with <code>

--- a/2013-03-04-backrow.md
+++ b/2013-03-04-backrow.md
@@ -41,32 +41,32 @@ Here's a brief list of some Back Row classes & protocols and their UIKit equival
   </thead>
   <tbody>
     <tr>
-      <td><tt>&lt;BRResponder&gt;</tt></td>
-      <td><tt>&lt;UIResponder&gt;</tt></td>
+      <td><code>&lt;BRResponder&gt;</code></td>
+      <td><code>&lt;UIResponder&gt;</code></td>
     </tr>
     <tr>
-      <td><tt>&lt;BRAppliance&gt;</tt></td>
-      <td><tt>&lt;UIApplication&gt;</tt></td>
+      <td><code>&lt;BRAppliance&gt;</code></td>
+      <td><code>&lt;UIApplication&gt;</code></td>
     </tr>
     <tr>
-      <td><tt>BRController</tt></td>
-      <td><tt>UIViewController</tt></td>
+      <td><code>BRController</code></td>
+      <td><code>UIViewController</code></td>
     </tr>
     <tr>
-      <td><tt>BRMenuController</tt></td>
-      <td><tt>UITableViewController</tt></td>
+      <td><code>BRMenuController</code></td>
+      <td><code>UITableViewController</code></td>
     </tr>
     <tr>
-      <td><tt>BRControllerStack</tt></td>
-      <td><tt>UINavigationController</tt></td>
+      <td><code>BRControllerStack</code></td>
+      <td><code>UINavigationController</code></td>
     </tr>
     <tr>
-      <td><tt>BRGridView</tt></td>
-      <td><tt>UICollectionView</tt></td>
+      <td><code>BRGridView</code></td>
+      <td><code>UICollectionView</code></td>
     </tr>
     <tr>
-      <td><tt>BRListView</tt></td>
-      <td><tt>UITableView</tt></td>
+      <td><code>BRListView</code></td>
+      <td><code>UITableView</code></td>
     </tr>
   </tbody>
 </table>
