--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -112,39 +112,39 @@ So, to recap, here is a table of all of the truth types and values in Objective-
   </thead>
   <tbody>
     <tr>
-      <td><tt>BOOL</tt></td>
-      <td><tt>signed char</tt></td>
+      <td><code>BOOL</code></td>
+      <td><code>signed char</code></td>
       <td>objc.h</td>
-      <td><tt>YES</tt></td>
-      <td><tt>NO</tt></td>
+      <td><code>YES</code></td>
+      <td><code>NO</code></td>
     </tr>
     <tr>
-      <td><tt>bool</tt></td>
-      <td><tt>_Bool</tt> (<tt>int</tt>)</td>
+      <td><code>bool</code></td>
+      <td><code>_Bool</code> (<code>int</code>)</td>
       <td>stdbool.h</td>
-      <td><tt>true</tt></td>
-      <td><tt>false</tt></td>
+      <td><code>true</code></td>
+      <td><code>false</code></td>
     </tr>
     <tr>
-      <td><tt>Boolean</tt></td>
-      <td><tt>unsigned char</tt></td>
+      <td><code>Boolean</code></td>
+      <td><code>unsigned char</code></td>
       <td>MacTypes.h</td>
-      <td><tt>TRUE</tt></td>
-      <td><tt>FALSE</tt></td>
+      <td><code>TRUE</code></td>
+      <td><code>FALSE</code></td>
     </tr>
     <tr>
-      <td><tt>NSNumber</tt></td>
-      <td><tt>__NSCFBoolean</tt></td>
+      <td><code>NSNumber</code></td>
+      <td><code>__NSCFBoolean</code></td>
       <td>Foundation.h</td>
-      <td><tt>@(YES)</tt></td>
-      <td><tt>@(NO)</tt></td>
+      <td><code>@(YES)</code></td>
+      <td><code>@(NO)</code></td>
     </tr>
     <tr>
-      <td><tt>CFBooleanRef</tt></td>
-      <td><tt>struct</tt></td>
+      <td><code>CFBooleanRef</code></td>
+      <td><code>struct</code></td>
       <td>CoreFoundation.h</td>
-      <td><tt>kCFBooleanTrue</tt></td>
-      <td><tt>kCFBooleanFalse</tt></td>
+      <td><code>kCFBooleanTrue</code></td>
+      <td><code>kCFBooleanFalse</code></td>
     </tr>
   </tbody>
 </table>
