--- a/2012-08-27-cfbag.md
+++ b/2012-08-27-cfbag.md
@@ -28,58 +28,58 @@ However, toll-free bridging is the exception when it comes to collection classes
   </thead>
   <tbody>
     <tr>
-      <td><tt>NSArray</tt><sup>*</sup></td>
-      <td><tt>CFArray</tt><sup>*</sup></td>
+      <td><code>NSArray</code><sup>*</sup></td>
+      <td><code>CFArray</code><sup>*</sup></td>
       <td>✓</td>
     </tr>
     <tr>
-      <td><tt>NSCountedSet</tt></td>
-      <td><tt>CFBag</tt><sup>*</sup></td>
+      <td><code>NSCountedSet</code></td>
+      <td><code>CFBag</code><sup>*</sup></td>
       <td></td>
     </tr>
     <tr>
       <td><em>N/A</em></td>
-      <td><tt>CFBinaryHeap</tt></td>
+      <td><code>CFBinaryHeap</code></td>
       <td></td>
     </tr>
     <tr>
       <td><em>N/A</em></td>
-      <td><tt>CFBitVector</tt><sup>*</sup></td>
+      <td><code>CFBitVector</code><sup>*</sup></td>
       <td></td>
     </tr>
     <tr>
-      <td><tt>NSDictionary</tt><sup>*</sup></td>
-      <td><tt>CFDictionary</tt><sup>*</sup></td>
+      <td><code>NSDictionary</code><sup>*</sup></td>
+      <td><code>CFDictionary</code><sup>*</sup></td>
       <td>✓</td>
     </tr>
     <tr>
-      <td><tt>NSIndexSet</tt><sup>*</sup></td>
+      <td><code>NSIndexSet</code><sup>*</sup></td>
       <td><em>N/A</em></td>
       <td></td>
     </tr>
     <tr>
-      <td><tt>NSMapTable</tt></td>
+      <td><code>NSMapTable</code></td>
       <td><em>N/A</em></td>
       <td></td>
     </tr>
     <tr>
-      <td><tt>NSOrderedSet</tt></td>
+      <td><code>NSOrderedSet</code></td>
       <td><em>N/A</em></td>
       <td></td>
     </tr>
     <tr>
-      <td><tt>NSPointerArray</tt></td>
+      <td><code>NSPointerArray</code></td>
       <td><em>N/A</em></td>
       <td></td>
     </tr>
     <tr>
-      <td><tt>NSPointerFunctions</tt></td>
+      <td><code>NSPointerFunctions</code></td>
       <td><em>N/A</em></td>
       <td></td>
     </tr>
     <tr>
-      <td><tt>NSSet</tt><sup>*</sup></td>
-      <td><tt>CFSet</tt><sup>*</sup></td>
+      <td><code>NSSet</code><sup>*</sup></td>
+      <td><code>CFSet</code><sup>*</sup></td>
       <td>✓</td>
     </tr>
   </tbody>
