--- a/2013-01-07-nil.md
+++ b/2013-01-07-nil.md
@@ -62,23 +62,23 @@ So to recap, here are the four values representing _nothing_ that every Objectiv
   </thead>
   <tbody>
     <tr>
-      <td><tt>NULL</tt></td>
-      <td><tt>(void *)0</tt></td>
+      <td><code>NULL</code></td>
+      <td><code>(void *)0</code></td>
       <td>literal null value for C pointers</td>
     </tr>
     <tr>
-      <td><tt>nil</tt></td>
-      <td><tt>(id)0</tt></td>
+      <td><code>nil</code></td>
+      <td><code>(id)0</code></td>
       <td>literal null value for Objective-C objects</td>
     </tr>
     <tr>
-      <td><tt>Nil</tt></td>
-      <td><tt>(Class)0</tt></td>
+      <td><code>Nil</code></td>
+      <td><code>(Class)0</code></td>
       <td>literal null value for Objective-C classes</td>
     </tr>
     <tr>
-      <td><tt>NSNull</tt></td>
-      <td><tt>[NSNull null]</tt></td>
+      <td><code>NSNull</code></td>
+      <td><code>[NSNull null]</code></td>
       <td>singleton object used to represent null</td>
     </tr>
   </tbody>
