Shorten Locale syntax

--- a/2012-09-03-locale.md
+++ b/2012-09-03-locale.md
@@ -113,7 +113,7 @@ other preferences like currency, calendar system, or number format
 with the following syntax:
 
 ```
-language[_region][.character-encoding][@modifier=value[,modifier=value]]
+language[_region][.character-encoding][@modifier=value[, ...]]
 ```
 
 For example,
